
// [START declaration]
syntax = "proto3";
package dotbpe;
// [END declaration]

// [START csharp_declaration]
option csharp_namespace = "DotBPE.Protobuf";
// [END csharp_declaration]

import "google/protobuf/descriptor.proto";

//扩展服务
extend google.protobuf.ServiceOptions {
  int32 service_id = 51001; //服务号
  bool disable_generic_service_client = 51003; //是否生成客户端代码
  bool disable_generic_service_server = 51004; //是否生成服务端代码
}
extend google.protobuf.MethodOptions {
  int32 message_id = 51002; //消息号

  HttpApiOption http_api_option = 51003; //http 接口的对应配置
}

extend google.protobuf.FileOptions {
  bool disable_generic_services_client = 51003; //是否生成客户端代码
  bool disable_generic_services_server = 51004; //是否生成服务端代码
  bool generic_markdown_doc = 51005; //是否生成文档
  bool generic_objectfactory = 51006; //是否生成对象创建工厂

  bool generic_http_api_routes = 51007; //是否生成
}

//
message HttpApiOption {
    string path = 1 ; // 路径
    string method = 2 ; //请求的方法

    string description = 3 ;//注释说明
}
